[package]
name = "engine_rocks"
version = "0.0.1"
edition = "2018"
publish = false

[features]
protobuf-codec = [
  "keys/protobuf-codec",
  "txn_types/protobuf-codec",
  "raft/protobuf-codec",
  "kvproto/protobuf-codec",
]
prost-codec = [
  "keys/prost-codec",
  "txn_types/prost-codec",
  "raft/prost-codec",
  "kvproto/prost-codec",
]
jemalloc = ["rocksdb/jemalloc"]
portable = ["rocksdb/portable"]
sse = ["rocksdb/sse"]

# Disables runtime checks of invariants required by RocksDB that are redundant
# with assertions inside RocksDB itself. This makes it possible to test those
# invariants in Rust tests, resulting an a panic instead of an abort, at the
# expense of an extra branch. This feature exists to mark those extra branches.
# The checks _can_ be disabled by enabling this feature, though it may not
# result in any real performance improvement to do so, and it will break
# the test suite.
#
# Probably these checks should be in the rust-rocksdb crate itself, in order
# to ensure the bindings are safe, but until that is done, they are here.
nortcheck = []

[dependencies]
encryption = { path = "../encryption" }
engine_traits = { path = "../engine_traits" }
keys = { path = "../keys" }
num_cpus = "1"
prometheus = { version = "0.8", features = ["nightly"] }
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "0e23a5baff302a9d7bccd85f8f31e43339c2f2c1" }
tikv_alloc = { path = "../tikv_alloc" }
tikv_util = { path = "../tikv_util" }
txn_types = { path = "../txn_types"}
lazy_static = "1.4.0"
log_wrappers = { path = "../log_wrappers" }
time = "0.1"
configuration = { path = "../configuration" }
tempfile = "3.0"
serde = "1.0"
serde_derive = "1.0"
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
raft = { version = "0.6.0-alpha", default-features = false }
protobuf = "2"

[dependencies.rocksdb]
git = "https://github.com/tikv/rust-rocksdb.git"
package = "rocksdb"
features = ["encryption", "static_libcpp"]

[dependencies.prometheus-static-metric]
git = "https://github.com/tikv/rust-prometheus.git"
rev = "fd122caa03de8e7e5e4fae9372583aebf19e39f6"

[dev-dependencies]
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
rand = "0.7"
toml = "0.4"
