[package]
name = "engine_sled"
version = "0.0.1"
description = "A TiKV storage engine using the sled pure-Rust KV engine"
edition = "2018"
publish = false

[dependencies]
engine_traits = { path = "../engine_traits" }
tikv_alloc = { path = "../tikv_alloc" }
# FIXME: Remove this dep from the engine_traits interface
tikv_util = { path = "../tikv_util" }
txn_types = { path = "../txn_types" }
