[package]
name = "engine_sled"
version = "0.0.1"
description = "A TiKV storage engine using the sled pure-Rust KV engine"
edition = "2018"
publish = false

[dependencies]
engine_traits = { path = "../engine_traits" }
tikv_alloc = { path = "../tikv_alloc" }
# FIXME: Remove this dep from the engine_traits interface
tikv_util = { path = "../tikv_util" }
kvproto = { git = "https://github.com/pingcap/kvproto.git", default-features = false }
raft = { version = "0.6.0-alpha", default-features = false }
txn_types = { path = "../txn_types" }
