[package]
name = "engine_traits_tests"
version = "0.0.1"
description = "Engine-agnostic tests for the engine_traits interface"
edition = "2018"
publish = false

[dev-dependencies]
engine_test = { path = "../engine_test" }
engine_traits = { path = "../engine_traits" }
tikv_alloc = { path = "../tikv_alloc" }
tempfile = "3.0"
