[package]
name = "raftstore"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
crossbeam = "0.5"
derive_more = "0.15.0"
hex = "0.3"
kvproto = { git = "https://github.com/pingcap/kvproto.git" }
lazy_static = "1.3"
protobuf = "2.8"
quick-error = "1.2.2"
raft = "0.6.0-alpha"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }

engine = { path = "../engine" }
# TODO: Eliminate this dependency to make pd_client and raftstore build in
# parallel
pd_client = { path = "../pd_client" }
tikv_util = { path = "../tikv_util" }

[dependencies.prometheus]
version = "0.4.2"
default-features = false
