[package]
name = "storage_types"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
byteorder = "1.2"
hex = "0.3"
quick-error = "1.2.2"
slog = { version = "2.3", features = ["max_level_trace", "release_max_level_debug"] }
slog-global = { version = "0.1", git = "https://github.com/breeswish/slog-global.git", rev = "91904ade" }

engine = { path = "../engine" }
keys = { path = "../keys" }
tikv_util = { path = "../tikv_util" }
